--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_rating_bar: ^4.0.1
   flutter:
     sdk: flutter
 
@@ -47,6 +48,9 @@ dependencies:
   provider: ^6.0.5
   mailer: ^5.0.0
   image_picker: ^0.8.4
+  location: ^4.4.0
+  google_maps_flutter: ^2.2.6
+  geolocator: ^8.2.1
 
 
 dev_dependencies:
@@ -74,6 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - img/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
