--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,19 @@ dependencies:
   google_maps_flutter: ^2.2.0
   geolocator: ^7.0.3
   url_launcher: ^6.1.11
+  flutter_local_notifications: ^14.1.1
+  file_picker: ^5.3.1
+  multiselect_formfield: ^0.1.3
+  multi_select_flutter: ^4.0.0
+  intl: ^0.17.0
+  geocoding: ^2.1.0
+  path_provider: ^2.0.7
+  open_file: ^3.2.1
+  dialog_flowtter:
+
+dependency_overrides:
+  awesome_notifications: 0.6.19
+
 
 dev_dependencies:
   flutter_test:
@@ -79,6 +92,7 @@ flutter:
   assets:
     - img/
     - assets/images/
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
