--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
   geocoding: ^2.1.0
   path_provider: ^2.0.7
   open_file: ^3.2.1
-  dialog_flowtter:
+  dialog_flowtter: ^0.3.3
 
 dependency_overrides:
   awesome_notifications: 0.6.19
