--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,9 @@ dependencies:
   dialog_flowtter: ^0.3.3
   flutter_local_notifications: ^14.1.1
 
+  flutter_pdfview: ^1.3.1
+  http: ^0.13.6
+
 
 dependency_overrides:
   awesome_notifications: 0.6.19
